src/_includes/assets/css/screen.css
/* ... */
.tags-row a:hover {
  text-decoration: none;
}

/* 13. learn-cta-row and social-row
/* ---------------------------------------------------------- */

.social-row,
.learn-cta-row {
  margin: 2em 0 0;
}

.donation-row h4 {
  margin: 0 0 1.5em;
}

/* a.donation-cta {
    display: flex;
    align-items: flex-start;
    justify-items: center;
    text-decoration: none;
    flex-direction: column;
    margin-bottom: 1.5em;
} */

button.cta-button,
a.cta-button {
  width: content;
  text-decoration: none;
  display: inline-block;
  outline: none;
  border: 3px solid var(--gray90);
  background: var(--gray10);
  color: var(--gray90);
  text-decoration: none;
  padding: 0 20px;
}

.cta-button:hover {
  background: var(--gray90);
  color: var(--gray10);
}

@media (min-width: 700px) {
  a.donation-cta {
    flex-direction: row;
  }

  .donation-button {
    margin: 0 10px 0 0;
  }
}

/* 14. under-header-content donation
/* ---------------------------------------------------------- */

a.banner {
  position: fixed;
  top: var(--header-height);
  background-color: var(--blue-dark);
  align-items: center;
  justify-content: center;
  font-size: 14px;
  padding: 8px;
  width: 100vw;
  font-weight: 700;
  z-index: 999;
  color: var(--gray00);
  text-decoration: none;
  display: flex;
  animation: fadein 1s;
  min-height: 44px;
}

@keyframes fadein {
  from {
    opacity: 0;
    height: 0;
  }
  to {
    opacity: 1;
    height: auto;
  }
}

a.banner * {
  margin: 0;
}

a.banner span {
  text-decoration: underline;
}

a.banner:hover {
  text-decoration: none;
}

a.banner:hover span {
  text-decoration: none;
}

@media (min-width: 500px) {
  a.banner {
    padding: 10px;
    font-size: 17px;
  }
}

/* 15. Ads
/* ---------------------------------------------------------- */

.ad-wrapper {
  text-align: center;
  min-height: 280px;
}

.ad-wrapper.banner {
  min-width: 100%;
}

.ad-wrapper .ad-text {
  color: var(--gray75);
  font-size: 1.4rem;
  margin-bottom: 10px;
}

/* Adjust image and video widths when ads are enabled */
/* Ghost editor images */
.ad-layout .post-full-content .kg-image-card img,
/* Markdown images */
.ad-layout .post-full-content p img,
/* HTML video */
.ad-layout .post-full-content video {
  max-width: 100%;
}

/* Hide sidebar by default for smaller screens */
.ad-layout .sidebar {
  display: none;
}

/* Display sidebar for desktop readers */
@media (min-width: 900px) {
  .ad-layout .post-full-content {
    padding: 70px 0 0;
  }

  .ad-layout .post-and-sidebar {
    display: grid;
    grid-template-columns: minmax(0, 1fr) 300px;
    gap: 40px;
    margin: 0 auto;
  }

  .ad-layout .sidebar {
    display: flex;
    max-width: 300px;
    flex-direction: column;
    justify-content: space-between;
  }
}

/* 16. RTL layout
/* ---------------------------------------------------------- */
.rtl-layout {
  direction: rtl;
}

.rtl-layout .post-full-content pre {
  direction: ltr;
}

.rtl-layout .author-card .avatar-wrapper,
.rtl-layout .author-card img.author-profile-image {
  margin: 0 0 0 15px;
}

.rtl-layout .post-card-meta {
  padding: 0 4px 25px 25px;
}

.rtl-layout .meta-item,
.rtl-layout .reading-time {
  margin-left: 0;
  margin-right: 20px;
}

.rtl-layout .post-card-tags a {
  padding-right: 0;
  padding-left: 15px;
}

@media (min-width: 768px) {
  .rtl-layout .post-card .post-card-content-link {
    padding: 0 30px 0 0;
  }

  .rtl-layout .post-card .post-card-meta {
    padding: 0 34px 0 0;
  }
}

@media (max-width: 999px) {
  .rtl-layout .site-nav-middle {
    margin-left: auto;
  }

  .rtl-layout .site-nav-middle {
    margin-right: 0;
  }
}

.rtl-layout .nav-group {
  margin-right: auto;
  margin-left: 0;
  display: flex;
  align-items: center;
}

.rtl-layout .toggle-button-nav {
  margin-right: auto;
  margin-left: 5px;
}

.rtl-layout a.nav-forum {
  margin-right: 0;
  margin-left: 19px;
}

.rtl-layout .post-full-content p code {
  direction: ltr;
  unicode-bidi: isolate;
}

